# openvino

docs/template_extension/: CMakeLists.txt
inference-engine/include/plaidml/: plaidml_config.hpp
inference-engine/samples/benchmark_app/: infer_request_wrap.hpp  main.cpp
inference-engine/samples/hello_reshape_ssd/: CMakeLists.txt
inference-engine/samples/ngraph_function_creation_sample/: CMakeLists.txt
inference-engine/samples/object_detection_sample_ssd/: CMakeLists.txt
inference-engine/src/: CMakeLists.txt
inference-engine/src/inference_engine/: CMakeLists.txt  ie_blob_stream.cpp  ie_network_reader.cpp  ie_plugin_dispatcher.cpp
inference-engine/src/plaidml_plugin/: CMakeLists.txt  plaidml_executable_network.cpp  plaidml_executable_network.hpp  plaidml_infer_request.cpp  plaidml_plugin.cpp  plaidml_program_builder.cpp  plaidml_program_builder.hpp  plaidml_util.cpp  plaidml_util.hpp
inference-engine/src/plaidml_plugin/ops/: batch_to_space.cpp  binary_convolution.cpp  bucketize.cpp  embedding_bag_offsets_sum.cpp  embedding_bag_packed_sum.cpp  extract_image_patches.cpp  gelu.cpp  gru_cell.cpp  hswish.cpp  lstm_cell.cpp  reorg_yolo.cpp  reverse.cpp  rnn_cell.cpp  roi_align.cpp  shuffle_channels.cpp  space_to_batch.cpp  split.cpp  variadic_split.cpp
inference-engine/src/readers/ir_reader/: ie_ir_parser.cpp
inference-engine/src/readers/reader_api/: ie_blob_stream.cpp
inference-engine/tests/functional/plugin/: CMakeLists.txt
inference-engine/tests/ie_test_utils/common_test_utils/: common_utils.hpp  test_constants.hpp
inference-engine/tests/ie_test_utils/functional_test_utils/: blob_utils.hpp  layer_test_utils.cpp  layer_test_utils.hpp  plugin_cache.cpp  skip_tests_config.hpp
inference-engine/tests/ngraph_functions/src/: activation.cpp  convolution_backprop_data.cpp  deformable_convolution.cpp  depth_to_space.cpp  fake_quantize.cpp  group_convolution.cpp  group_convolution_backprop_data.cpp  mat_mul.cpp  mvn.cpp  reduce.cpp  select.cpp  space_to_depth.cpp  strided_slice.cpp  variadic_split.cpp
ngraph/test/: CMakeLists.txt  attributes.cpp
ngraph/test/runtime/ie/: unit_test.manifest
(+308 files in other folders)
